# github-audit-lambda

./: .gitignore  .pylintrc  Dockerfile  Makefile  README.md  app.py  config.json  pyproject.toml
terraform/batch/: data.tf  main.tf  providers.tf  variables.tf
terraform/lambda/: main.tf  outputs.tf  variables.tf
terraform/lambda/env/dev/: example_tfvars.txt
terraform/storage/: outputs.tf  storage.tf  variables.tf
terraform/storage/env/dev/: example_tfvars.txt
