[tool.poetry]
name = "gh-policy-lambda-new"
version = "0.1.0"
description = ""
authors = ["Sebastian <Sebastian.Evison-Theodossiades@ons.gov.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "1.34.123"
botocore = "1.34.145"
certifi = "2024.7.4"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
cryptography = "43.0.0"
idna = "3.7"
jmespath = "1.0.1"
jwt = "1.3.1"
pycparser = "2.22"
python-dateutil = "2.9.0.post0"
requests = "2.32.3"
s3transfer = "0.10.2"
six = "1.16.0"
urllib3 = "2.2.2"
github-api-toolkit = {git = "https://github.com/ONS-Innovation/github-api-package.git", rev = "v2.0.2"}

[tool.poetry.group.dev.dependencies]
ruff = "0.6.9"
black = "24.10.0"
pylint = "3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
